src/components/Container/Container.css
.container {
  width: 280px;
  min-height: 100px;
  padding: 10px;
  border-radius: 15px;
  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
  background-color: rgba(255, 255, 255, 0.4);
}

.container-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 10px;
  column-gap: 4px;
}

.container-title {
  font-size: 1.4rem;
  font-weight: 1000;
  width: 100%;
  -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
  overflow: hidden;
  text-overflow: ellipsis;
}

.container-items {
  display: flex;
  flex-direction: column;
  row-gap: 14px;
}

#settings:hover {
  animation: rotate .8s;
}

@keyframes rotate {
  0% {
    rotate: 0;
  }

  100% {
    rotate: 180deg;
  }
}

